--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -6,5 +6,5 @@
 -->
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab tabTitle="Add Project" (ionSelect)="addProject()" tabIcon="add-circle"></ion-tab>
+  <ion-tab tabTitle="Add Task" (ionSelect)="addTask()" tabIcon="add-circle"></ion-tab>
 </ion-tabs>
