--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -7,4 +7,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab tabTitle="Add Task" (ionSelect)="addTask()" tabIcon="add-circle"></ion-tab>
+  <ion-tab [root]='tab2Root' tabTitle="Wish List" tabIcon="color-wand"></ion-tab>
 </ion-tabs>
