Linked landing page to the homePage

--- a/src/pages/landing-page/landing-page.html
+++ b/src/pages/landing-page/landing-page.html
@@ -22,13 +22,13 @@
   </ion-row>
   <ion-row>
     <ion-col>
-      <button ion-button class="landing-button">
+      <button ion-button class="landing-button" (click) = "changeMomPage()">
         <h1>New Mom</h1> 
         <h3>Expecting moms too!</h3>
     </button>
     </ion-col>
     <ion-col>
-      <button ion-button class="landing-button">
+      <button ion-button class="landing-button" (click) = "changeKidPage()">
         <h1>Villager</h1>
         <h3>Friends / family members of a new mom, that's you!</h3>
       </button>
