--- a/src/pages/wish-list/wish-list.html
+++ b/src/pages/wish-list/wish-list.html
@@ -9,7 +9,8 @@
   <ion-navbar>
     <ion-title>Wish List</ion-title>
   </ion-navbar>
-  <ion-title class="open-task" (click)="addToWishlist()">Add to wishlist </ion-title>
+  <button ion-button color="secondary" outline (click)="addToWishlist()">Add to Wishlist</button>
+  <!-- <ion-title class="open-task" (click)="addToWishlist()">Add to wishlist </ion-title> -->
 </ion-header>
 
 <ion-content padding>
