added logo to navbar, fixed landing page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar align-title="center">
     <ion-buttons left>
-      <img class="header-logo" src="assets/img/catsCodeLogo.png">
+      <img class="header-logo" src="assets/img/myVillageLogo.jpg">
     </ion-buttons>
     <ion-title class="open-task" (click)="scrollToTop()">Tasks</ion-title>
    </ion-toolbar>
