fixed button centering

--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -22,14 +22,14 @@
     </ion-col>
   </ion-row>
   <ion-row>
-    <ion-col>
+    <ion-col style="padding: 0px 25px;">
       <button ion-button class="landing-button" (click) = "changeMomPage()">
         <h1>New Mom
         <br />
         Expecting moms too!</h1>
     </button>
     </ion-col>
-    <ion-col>
+    <ion-col style="padding: 0px 25px;">
       <button ion-button class="landing-button" (click) = "changeKidPage()">
         <h1>Villager
         <br/>
