fixed button text

--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -24,16 +24,12 @@
   <ion-row>
     <ion-col style="padding: 0px 25px;">
       <button ion-button class="landing-button" (click) = "changeMomPage()">
-        <h1>New Mom
-        <br />
-        Expecting moms too!</h1>
+        <h1>New/Expecting Moms</h1>
     </button>
     </ion-col>
     <ion-col style="padding: 0px 25px;">
       <button ion-button class="landing-button" (click) = "changeKidPage()">
-        <h1>Villager
-        <br/>
-        Friends / family members of a new mom, that's you!</h1>
+        <h1>Villager </h1>
       </button>
     </ion-col>
   </ion-row>
