added logo to landing

--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -12,11 +12,11 @@
   </ion-navbar>
 
 </ion-header>
-
-
 <ion-content>
   <ion-row>
     <ion-col>
+      <img  src="assets/img/myVillageTagline.jpg">
+
       <h1 class="title-text"> Get started today!</h1>
       <h1 class="title-text"> I am a... </h1>
     </ion-col>
