--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,6 +8,10 @@
 </ion-header>
 
 <ion-content padding>
+
+	<ion-fab top right edge>
+   		<button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+ 	</ion-fab>
 	<ion-list>
 		<ion-card *ngFor="let task of tasks | async">
 			<ion-item>
