--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -5,7 +5,6 @@
   Ionic pages and navigation.
 -->
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab tabTitle="Add Task" (ionSelect)="addTask()" tabIcon="add-circle"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Task List" tabIcon="ios-list-box"></ion-tab>
   <ion-tab [root]='tab2Root' tabTitle="Wish List" tabIcon="color-wand"></ion-tab>
 </ion-tabs>
