added logos to all navbars & readjusted tagline

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <ion-buttons left>
       <img class="header-logo" src="assets/img/myVillageLogo.jpg">
     </ion-buttons>
-    <ion-title class="open-task" (click)="scrollToTop()">Tasks</ion-title>
+    <ion-title (click)="scrollToTop()">Tasks</ion-title>
    </ion-toolbar>
 </ion-header>
 
