--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -8,15 +8,14 @@
 
   <ion-navbar>
     <!-- <ion-title>Welcome to MyVillage</ion-title> -->
-    <img class="header-logo" src="assets/img/myVillageLogo.jpg">
+    <img id="header-logo" src="assets/img/myVillageLogo.jpg">
   </ion-navbar>
 
 </ion-header>
 <ion-content>
   <ion-row>
     <ion-col>
-      <img  src="assets/img/myVillageTagline.jpg">
-
+      <img id="tagline" src="assets/img/myVillageTagline.jpg">
       <h1 class="title-text"> Get started today!</h1>
       <h1 class="title-text"> I am a... </h1>
     </ion-col>
@@ -24,7 +23,7 @@
   <ion-row>
     <ion-col style="padding: 0px 25px;">
       <button ion-button class="landing-button" (click) = "changeMomPage()">
-        <h1>New/Expecting Moms</h1>
+        <h1>New/Expecting Mom</h1>
     </button>
     </ion-col>
     <ion-col style="padding: 0px 25px;">
