--- a/src/pages/wish-list/wish-list.html
+++ b/src/pages/wish-list/wish-list.html
@@ -5,34 +5,28 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
+  <ion-toolbar align-title="center">
     <ion-buttons left>
       <img class="header-logo" src="assets/img/myVillageLogo.jpg">
     </ion-buttons>
-    <ion-title>Wish List</ion-title>
-  </ion-navbar>
-  <!-- <ion-title class="open-task" (click)="addToWishlist()">Add to wishlist </ion-title> -->
+    <ion-title class="open-item" (click)="scrollToTop()">Wish List</ion-title>
+   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+
   <ion-fab top right edge>
       <button ion-fab (click)="addToWishlist()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
   </ion-fab>
 
-  <ion-card *ngFor="let wish of wishList | async">
+  <ion-card *ngFor="let wish of wishList | async" (click)="wishTapped(wish)">
     <ion-item>
-    <ion-label>{{wish.p_name}}</ion-label>
-    <ion-checkbox color="dark" checked="true"></ion-checkbox>
+    <ion-label>{{wish.wl_name}}</ion-label>
       <p></p>
     </ion-item>
     <ion-card-content>
-      <p><b>Description:</b> {{wish.p_description}} </p>
+      <p><b>Description:</b> {{wish.wl_description}} </p>
     </ion-card-content>
-    <label class="item item-input">
-      <span class="input-label">Name</span>
-      <input type="email">
-    </label>
   </ion-card>
 
 </ion-content>
