--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,6 +7,27 @@
    </ion-toolbar>
 </ion-header>
 
+<ion-menu [content]="mycontent">
+  <ion-content>
+    <ion-list>
+      <button ion-item >
+        Mental
+        </button>
+        <button ion-item >
+        Emotional
+        </button>
+        <button ion-item >
+        Services
+        </button>
+        <button ion-item >
+        Category 4
+        </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav #mycontent [root]="rootPage"></ion-nav>
+
 <ion-content padding>
 
 	<ion-fab top right edge>
