side menu only work on iOS for now

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
         Services
         </button>
         <button ion-item >
-        Category 4
+        Category 4 - something
         </button>
     </ion-list>
   </ion-content>
