--- a/src/pages/wish-list/wish-list.html
+++ b/src/pages/wish-list/wish-list.html
@@ -5,11 +5,16 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-toolbar align-title="center">
+  <ion-toolbar center>
     <ion-buttons left>
-      <img class="header-logo" src="assets/img/myVillageLogo.jpg">
+      <!-- <button ion-button menuToggle icon-only>
+        <ion-icon name='menu'></ion-icon>
+      </button> -->
     </ion-buttons>
     <ion-title class="open-item" (click)="scrollToTop()">Wish List</ion-title>
+    <ion-buttons right>
+      <img class="header-logo" src="assets/img/myVillageLogo.jpg">
+    </ion-buttons>
    </ion-toolbar>
 </ion-header>
 
