added sidemenu title

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,5 @@
 <ion-header>
   <ion-toolbar align-title="center">
-
     <ion-buttons left>
       <button ion-button menuToggle icon-only>
         <ion-icon name='menu'></ion-icon>
@@ -14,6 +13,11 @@
 </ion-header>
 
 <ion-menu [content]="mycontent" type="overlay">
+  <ion-header>
+    <ion-title>
+      Categories
+    </ion-title>
+  </ion-header>
   <ion-content>
     <ion-list>
       <button ion-item>
