implemented dummy schedule

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <button ion-item>
+      <button ion-item (click)="navToSchedule($event)">
         Mental
       </button>
       <button ion-item>
