--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -20,18 +20,21 @@
 </ion-header>
 
 <ion-content>
+  <ion-item>
+    <ion-icon name="calendar" item-start></ion-icon>
+    <ion-label>Date</ion-label>
+    <ion-datetime displayFormat="MMM DD, YYYY" max="2056" [(ngModel)]="currDate" (click)="tellDate()"></ion-datetime>
+  </ion-item>
   <button ion-button class="register-btn" (click)="prevDay()">PrevDay</button>
   {{days[currDay]}}
   <button ion-button class="register-btn" (click)="nextDay()">NextDay</button>
   <ion-list>
-		<ion-card  *ngFor="let day of daySched | async" (click)="updateSchedule()" class="red">
+		<ion-card  *ngFor="let hour of daySched | async" (click)="updateSchedule()" class="red">
 			<ion-item>
-			<ion-label>{{day.twelve}}</ion-label>
-			<ion-label>{{day.eleven}}</ion-label>
-			<ion-label>{{day.ten}}</ion-label>
+			<ion-label>{{hour.time}}</ion-label>
 			</ion-item>
 			<ion-card-content>
-				<p><b>Description:</b>{{day.task}}</p>
+				<p><b>Description:</b>{{hour.task}}</p>
 			</ion-card-content>
 		</ion-card>
 	</ion-list>
