--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -25,17 +25,33 @@
     <ion-label>Date</ion-label>
     <ion-datetime displayFormat="MMM DD, YYYY" max="2056" [(ngModel)]="currDate" (click)="tellDate()"></ion-datetime>
   </ion-item>
-  <button ion-button class="register-btn" (click)="prevDay()">PrevDay</button>
+  <button ion-button class="register-btn" (click)="prevDay(0)">Sunday</button>
+  <button ion-button class="register-btn" (click)="prevDay(1)">Monday</button>
+  <button ion-button class="register-btn" (click)="prevDay(2)">Tuesday</button>
+  <button ion-button class="register-btn" (click)="prevDay(3)">Wednesday</button>
+  <button ion-button class="register-btn" (click)="prevDay(4)">Thursday</button>
+  <button ion-button class="register-btn" (click)="prevDay(5)">Friday</button>
+  <button ion-button class="register-btn" (click)="prevDay(6)">Saturday</button>
   {{days[currDay]}}
   <button ion-button class="register-btn" (click)="nextDay()">NextDay</button>
   <ion-list>
 		<ion-card  *ngFor="let hour of daySched | async" (click)="updateSchedule()" class="red">
-			<ion-item>
-			<ion-label>{{hour.time}}</ion-label>
-			</ion-item>
-			<ion-card-content>
-				<p><b>Description:</b>{{hour.task}}</p>
-			</ion-card-content>
+      <ion-item-divider sticky>
+        <ion-label>
+          {{hour.time}}
+        </ion-label>
+      </ion-item-divider>
+			<ion-item-sliding #slidingItem>
+        <button ion-item (click)="goToSessionDetail(session)">
+          <h3>Description</h3>
+          <p>
+            {{hour.task}} &mdash;
+            John Doe has taken this task!
+          </p>
+        </button>
+			</ion-item-sliding>
+<!-- 			<ion-card-content>
+			</ion-card-content> -->
 		</ion-card>
 	</ion-list>
 </ion-content>
