Login working but no way to register at the moment

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -32,9 +32,24 @@
       </form>
     </div>
 
-</ion-header>
+  <div class="register-box">
+    <ion-row>
+      <ion-col>
+        <p (click)="createAccount()">New to MyVillage? Sign up now.</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="register-col">
+        <button ion-button class="register-btn" (click)="createAccount()">Create Account</button>
+      </ion-col>
+    </ion-row>
+  </div>
 
+  
+</ion-header>
 
 <ion-content padding>
 
 </ion-content>
+
+
