--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -15,22 +15,22 @@
           <ion-list>
             <ion-item class="reg-field">
               <ion-label fixed class="reg-form-label required">First Name</ion-label>
-              <ion-input type="text" name="firstName" placeholder="Willie" required></ion-input>
+              <ion-input type="text" name="firstName" placeholder="Willie" [(ngModel)] = "firstname" required></ion-input>
             </ion-item>
 
             <ion-item class="reg-field">
               <ion-label fixed class="reg-form-label required">Last Name</ion-label>
-              <ion-input type="text" name="lastName" placeholder="Cat" required></ion-input>
+              <ion-input type="text" name="lastName" placeholder="Cat" [(ngModel)] = "lastname" required></ion-input>
             </ion-item>
 
             <ion-item class="reg-field">
               <ion-label fixed class="reg-form-label required">Email</ion-label>
-              <ion-input type="text" name="email" placeholder="WillieCat2017@u.northwestern.edu" required></ion-input>
+              <ion-input type="text" name="email" placeholder="WillieCat2017@u.northwestern.edu" [(ngModel)] = "details.email" required></ion-input>
             </ion-item>
 
             <ion-item class="reg-field">
               <ion-label fixed class="reg-form-label required">Password</ion-label>
-              <ion-input type="text" name="Password" placeholder="Password" required></ion-input>
+              <ion-input type="text" name="Password" placeholder="Password" [(ngModel)] = "details.password" required></ion-input>
             </ion-item>
 
            </ion-list>
