Added basic logout button (for testing purposes)

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -43,6 +43,7 @@
         <button ion-button class="register-btn" (click)="createAccount()">Create Account</button>
       </ion-col>
     </ion-row>
+    <button ion-button class="register-btn" (click)="logout()">Logout</button>
   </div>
 
   
