fixed back arrow function

--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -34,7 +34,7 @@
   <button ion-button class="register-btn" (click)="prevDay(6)">Sat</button>
 
   <p>
-    <ion-icon class="curr-day-left" name="ios-arrow-back"  (click)="PreviousDay()"></ion-icon>
+    <ion-icon class="curr-day-left" name="ios-arrow-back"  (click)="prevDay()"></ion-icon>
     Current Day: {{days[currDay]}}
     <ion-icon class="curr-day-right" name="ios-arrow-forward"  (click)="nextDay()"></ion-icon>
   </p>
