--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -11,6 +11,7 @@
         <ion-icon name='menu'></ion-icon>
       </button> -->
     </ion-buttons>
+    Hi {{username}}!
     <ion-title class="open-item">Settings</ion-title>
     <ion-buttons right>
       <img class="header-logo" src="assets/img/myVillageLogo.jpg">
@@ -22,4 +23,5 @@
   <h1>Add Request</h1>
   <h1>Do Not Disturb Times</h1>
   <h1>Outstanding Village Sign Ups</h1>
+  <p (click)="sayMyName()">Tell console to say my name.</p>
 </ion-content>
