--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -43,7 +43,11 @@
         <button ion-button class="register-btn" (click)="createAccount()">Create Account</button>
       </ion-col>
     </ion-row>
-    <button ion-button class="register-btn" (click)="logout()">Logout</button>
+    <ion-row>
+      <ion-col class="register-col">
+        <button ion-button class="register-btn" (click)="logout()">Logout</button>
+      </ion-col>
+    </ion-row>
   </div>
 
   
