--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -5,6 +5,6 @@
   Ionic pages and navigation.
 -->
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Task List" tabIcon="list-box"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Registry" tabIcon="list-box"></ion-tab>
   <ion-tab [root]='tab2Root' tabTitle="Settings" tabIcon="cog"></ion-tab>
 </ion-tabs>
