--- a/src/pages/gifts/gifts.html
+++ b/src/pages/gifts/gifts.html
@@ -1,32 +1,52 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Description
-    </ion-title>
-    <ion-buttons start>
-      <button ion-button (click)="dismiss()">
-        <span ion-text color="primary" showWhen="ios">Cancel</span>
-        <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-toolbar>
+
+  <ion-navbar>
+    <ion-title>login</ion-title>
+  </ion-navbar>
+
+  <div class="login-box">
+      <form (ngSubmit)="login()" #registerForm="ngForm">
+        <ion-row>
+          <ion-col>
+            <ion-list>
+              <ion-item class="signin-field">
+                <ion-input type="text" placeholder="Email" name="email" [(ngModel)]="details.email" required></ion-input>
+              </ion-item>
+              <ion-item class="signin-field">
+                <ion-input type="password" placeholder="Password" name="password" [(ngModel)]="details.password" required></ion-input>
+              </ion-item>
+            </ion-list>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="signup-col">
+            <button ion-button class="submit-btn" full type="submit" [disabled]="!registerForm.form.valid">Login</button>
+          </ion-col>
+        </ion-row>
+      </form>
+    </div>
+
+  <div class="register-box">
+    <ion-row>
+      <ion-col>
+        <p (click)="createAccount()">New to MyVillage? Sign up now.</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="register-col">
+        <button ion-button class="register-btn" (click)="createAccount()">Create Account</button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="register-col">
+        <button ion-button class="register-btn" (click)="logout()">Logout</button>
+      </ion-col>
+    </ion-row>
+  </div>
+
+  
 </ion-header>
 
-<ion-content>
-  <ion-list>
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="{{character.image}}">
-        </ion-avatar>
-        <h2>{{character.name}}</h2>
-        <p>{{character.quote}}</p>
-      </ion-item>
+<ion-content padding>
 
-      <ion-item *ngFor="let item of character['items']">
-        {{item.title}}
-        <ion-note item-end>
-          {{item.note}}
-        </ion-note>
-      </ion-item>
-  </ion-list>
 </ion-content>
