--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,10 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
     <ion-title>login</ion-title>
   </ion-navbar>
+</ion-header>
+
+<ion-content>
 
   <div class="login-box">
       <form (ngSubmit)="login()" #registerForm="ngForm">
@@ -43,18 +45,7 @@
         <button ion-button class="register-btn" (click)="createAccount()">Create Account</button>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col class="register-col">
-        <button ion-button class="register-btn" (click)="logout()">Logout</button>
-      </ion-col>
-    </ion-row>
   </div>
-
-  
-</ion-header>
-
-<ion-content padding>
-
 </ion-content>
 
 
