Stored user info and implemented village view

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -42,10 +42,9 @@
 <ion-nav #mycontent [root]="rootPage"></ion-nav>
 
 <ion-content padding>
-
-	<ion-fab top right edge>
+	  <ion-fab top right edge *ngIf ="IsMother">
    		<button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
- 	</ion-fab>
+ 	  </ion-fab>
 	<ion-list>
 		<ion-card  *ngFor="let task of tasks | async" (click)="taskTapped(task)" class="red">
 			<ion-item>
