--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -15,7 +15,7 @@
           <ion-list>
             <ion-item class="reg-field">
               <ion-label fixed class="reg-form-label required">First Name</ion-label>
-              <ion-input type="text" name="firstName" placeholder="Willie" [(ngModel)] = "details.name" required></ion-input>
+              <ion-input type="text" name="firstName" placeholder="Willie" [(ngModel)] = "name" required></ion-input>
             </ion-item>
 
              <ion-item class="reg-field">
@@ -25,7 +25,13 @@
 
             <ion-item class="reg-field">
               <ion-label fixed class="reg-form-label required">Password</ion-label>
-              <ion-input type="text" name="Password" placeholder="Password" [(ngModel)] = "details.password" required></ion-input>
+              <ion-input type="text" name="Password" placeholder="Password" [(ngModel)] = "details.password" required></ion-input>b
+            </ion-item>
+
+
+             <ion-item class="reg-field">
+              <ion-label fixed class="reg-form-label required">M or V?</ion-label>
+              <ion-input type="text" name="Password" placeholder="Password" [(ngModel)] = "status" required></ion-input>b
             </ion-item>
 
            </ion-list>
