added div to cards; changed color formatting.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -44,19 +44,15 @@
    		<button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
  	</ion-fab>
 	<ion-list>
-    <div>
-      <div [style.background-color]="getStyle()">
-      I am a div that wants to be styled
+		<ion-card  *ngFor="let task of tasks | async" (click)="taskTapped(task)">
+      <div class ="{{task.t_category}}">
+			 <ion-item>
+			   <ion-label>{{task.t_name}}</ion-label>
+			 </ion-item>
+			 <ion-card-content>
+        <p><b>Description:</b> {{task.t_description}}</p>
+			 </ion-card-content>
       </div>
-      <button (click)="showStyle = !showStyle;">Toggle style</button>
-    </div>
-		<ion-card *ngFor="let task of tasks | async" (click)="taskTapped(task)" class="red">
-			<ion-item>
-			<ion-label>{{task.t_name}}</ion-label>
-			</ion-item>
-			<ion-card-content class ="{{task.t_category}}">
-				<p><b>Description:</b> {{task.t_description}}</p>
-			</ion-card-content>
 		</ion-card>
 	</ion-list>
 </ion-content>
