changed label to submit new registry

--- a/src/pages/modal/modal.html
+++ b/src/pages/modal/modal.html
@@ -39,5 +39,5 @@
 	    <ion-option value="2">2:00</ion-option>
 	  </ion-select>
 	</ion-item>
-	<button ion-button block (click)="closeModal()">Close Modal</button>
+	<button ion-button block (click)="closeModal()">Submit</button>
 </ion-content>
