--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -40,9 +40,11 @@
 
 <ion-content padding>
 	  <ion-fab top right edge *ngIf ="IsMother">
-   		<button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+   		<button ion-fab (click)="openModal()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
  	  </ion-fab>
-    <button ion-button block (click)="openModal()">Open Modal</button>
+    <ion-fab top right edge *ngIf ="IsVillager">
+      <button ion-fab (click)="addGift()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+    </ion-fab>
 	<ion-list>
 		<ion-card  *ngFor="let task of tasks | async" (click)="taskTapped(task)">
       <div class ="{{task.t_category}}">
