login page color scheme  made consistent with landing page

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>Login</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -47,5 +47,3 @@
     </ion-row>
   </div>
 </ion-content>
-
-
