--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -31,7 +31,7 @@
 
              <ion-item class="reg-field">
               <ion-label fixed class="reg-form-label required">M or V?</ion-label>
-              <ion-input type="text" name="Password" placeholder="Password" [(ngModel)] = "status" required></ion-input>b
+              <ion-input type="text" name="Password" placeholder="Mother or Villager" [(ngModel)] = "status" required></ion-input>b
             </ion-item>
 
            </ion-list>
