Caching of user data and villageID stuff

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -28,8 +28,15 @@
               <ion-input type="text" name="Password" placeholder="Password" [(ngModel)] = "details.password" required></ion-input>b
             </ion-item>
 
+	    <ion-item class="reg-field">
+              <ion-label fixed class="reg-form-label required">Village ID</ion-label>
+              <ion-input type="text" name="Password" placeholder="Password" [(ngModel)] = "villageID" required></ion-input>b
+            </ion-item>
+
+	    
+	    
            </ion-list>
-        </ion-col>
+	</ion-col>
       </ion-row>
 
       <ion-row id="reg-row">
