--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -6,6 +6,7 @@
 -->
 
 <ion-header>
+    <button ion-button class="button" (click)="goBacktoLog()"><ion-icon name="arrow-back"></ion-icon></button>
  </ion-header>
 
 <ion-content class="login-content" padding>
@@ -33,8 +34,8 @@
               <ion-input type="text" name="Password" placeholder="Password" [(ngModel)] = "villageID" required></ion-input>b
             </ion-item>
 
-	    
-	    
+
+
            </ion-list>
 	</ion-col>
       </ion-row>
