--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -5,8 +5,6 @@
     </button>
 
     <ion-segment [(ngModel)]="segment" (ionChange)="updateSchedule()">
-
-      
       <ion-segment-button value="alltasks" (click)="taskTaken(2)">
         All Tasks
       </ion-segment-button>
@@ -23,8 +21,6 @@
   </ion-navbar>
 
 </ion-header>
-
-
 
 <ion-content>
          <ion-menu [content]="mycontent" type="overlay">
@@ -54,15 +50,15 @@
   <ion-item>
     <ion-icon name="calendar" item-start></ion-icon>
     <ion-label>Date</ion-label>
-    <ion-datetime displayFormat="MMM DD, YYYY" max="2056" [(ngModel)]="currDate" (click)="tellDate()"></ion-datetime>
+    <ion-datetime displayFormat="MMM DD, YYYY" pickerFormat="MMMM DD, YYYY" max="2050" [(ngModel)]="currDate"></ion-datetime>
   </ion-item>
-  <button ion-button class="register-btn" (click)="prevDay(0)">Sun</button>
-  <button ion-button class="register-btn" (click)="prevDay(1)">Mon</button>
-  <button ion-button class="register-btn" (click)="prevDay(2)">Tue</button>
-  <button ion-button class="register-btn" (click)="prevDay(3)">Wed</button>
-  <button ion-button class="register-btn" (click)="prevDay(4)">Thur</button>
-  <button ion-button class="register-btn" (click)="prevDay(5)">Fri</button>
-  <button ion-button class="register-btn" (click)="prevDay(6)">Sat</button>
+  <button ion-button class="day-btn" (click)="changeDay(0)">Sun</button>
+  <button ion-button class="day-btn"(click)="changeDay(1)">Mon</button>
+  <button ion-button class="day-btn" (click)="changeDay(2)">Tue</button>
+  <button ion-button class="day-btn" (click)="changeDay(3)">Wed</button>
+  <button ion-button class="day-btn" (click)="changeDay(4)">Thur</button>
+  <button ion-button class="day-btn" (click)="changeDay(5)">Fri</button>
+  <button ion-button class="day-btn" (click)="changeDay(6)">Sat</button>
 
   <p>
     <ion-icon class="curr-day-left" name="ios-arrow-back"  (click)="prevDay()"></ion-icon>
@@ -101,12 +97,9 @@
           </p>
         </button>
 			</ion-item-sliding>
-<!-- 			<ion-card-content>
-			</ion-card-content> -->
 		</ion-card>
 	</ion-list>
   <ion-list>
-    askldfjklasdjflkasjdf
     <ion-item-sliding #slidingItem *ngFor="let task of tasks | async" (click)="updateSchedule()">
         <button ion-item *ngIf="task.taken == taken || taken == 2" (click)="taskTapped(task)">
           <h3>Description</h3>
@@ -119,8 +112,3 @@
   </ion-list>
 
 </ion-content>
-
-
-
-
-
