sidemenu working for all pages

--- a/src/pages/service-providers/service-providers.html
+++ b/src/pages/service-providers/service-providers.html
@@ -5,14 +5,18 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>Service Providers</ion-title>
+  <ion-navbar align-title="center">
+    <ion-buttons left>
+      <button ion-button menuToggle icon-only>
+        <ion-icon name='menu'></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title class="open-task">Service Providers</ion-title>
+    <ion-buttons right>
+      <img class="header-logo" src="assets/img/myVillageLogo.jpg">
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-
 </ion-content>
