--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar align-title="center">
+  <ion-navbar align-title="center">
     <ion-buttons left>
       <button ion-button menuToggle icon-only>
         <ion-icon name='menu'></ion-icon>
@@ -9,10 +9,10 @@
     <ion-buttons right>
       <img class="header-logo" src="assets/img/myVillageLogo.jpg">
     </ion-buttons>
-   </ion-toolbar>
+  </ion-navbar>
 </ion-header>
 
-<ion-menu [content]="mycontent" type="overlay">
+<!-- <ion-menu [content]="mycontent" type="overlay">
   <ion-header>
     <ion-title>
       Categories
@@ -36,7 +36,7 @@
   </ion-content>
 </ion-menu>
 
-<ion-nav #mycontent [root]="rootPage"></ion-nav>
+<ion-nav #mycontent [root]="rootPage"></ion-nav> -->
 
 <ion-content padding>
 	  <ion-fab top right edge *ngIf ="IsMother">
