fix bug: add task button disappeared

--- a/src/pages/modal/modal.html
+++ b/src/pages/modal/modal.html
@@ -37,6 +37,9 @@
 	    <ion-option value="0">12:00</ion-option>
 	    <ion-option value="1">1:00</ion-option>
 	    <ion-option value="2">2:00</ion-option>
+      <!-- <ion-option>
+        <ion-datetime displayFormat="MM/YYYY" pickerFormat="MMMM YYYY" [(ngModel)]="myDate"></ion-datetime>
+      </ion-option> -->
 	  </ion-select>
 	</ion-item>
 	<button ion-button block (click)="closeModal()">Submit</button>
