--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -1,9 +1,10 @@
 <ion-header>
-  <ion-navbar no-border-bottom>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-
+  <ion-navbar no-border-bottom align-title="center">
+    <ion-buttons left>
+      <button ion-button menuToggle icon-only (click)="openMenu()">
+        <ion-icon name='menu'></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-segment [(ngModel)]="segment" (ionChange)="updateSchedule()">
       <ion-segment-button value="alltasks" (click)="taskTaken(2)">
         All Tasks
@@ -15,15 +16,10 @@
         Untaken Tasks
       </ion-segment-button>
     </ion-segment>
-
-    <ion-buttons end>
-    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 <ion-content>
-
   <ion-item>
     <ion-icon name="calendar" item-start></ion-icon>
     <ion-label>Date</ion-label>
@@ -45,7 +41,7 @@
     Current Day: {{days[currDay]}}
     <ion-icon class="curr-day-right" name="ios-arrow-forward"  (click)="nextDay()"></ion-icon>
   </p>
-  <button ion-button block (click)="openModal()">Add Task</button>
+  <button ion-button block (click)="openModal()">Add Task</button>"
   <ion-list>
     <ion-card>
       <ion-item-divider sticky>
@@ -54,7 +50,7 @@
         </ion-label>
       </ion-item-divider>
       <ion-item-sliding #slidingItem *ngFor="let task of tasks | async" (click)="updateSchedule()">
-        <button ion-item *ngIf="task.taken == taken || taken == 2" (click)="taskTapped(task)">
+        <button ion-item (click)="taskTapped(task)">
           <h3>Description</h3>
           <p>
             {{task.name}} &mdash;
