--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar no-border-bottom align-title="center">
     <ion-buttons left>
-      <button ion-button menuToggle icon-only (click)="openMenu()">
+      <button ion-button menuToggle icon-only>
         <ion-icon name='menu'></ion-icon>
       </button>
     </ion-buttons>
